[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "api-harness"
version = "0.1.0"
description = "The simplest, thinnest harness that lets an agent call APIs and land the response into queryable SQLite."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
api-harness = "run:main"

[tool.setuptools]
py-modules = ["run", "helpers"]
